kubernetes/dgla-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dgla
  labels:
    name: dgla
    environment: production
