kubernetes/dgla-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dgla
  namespace: dgla
  labels:
    app: dgla
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8081"
spec:
  selector:
    app: dgla
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  type: ClusterIP
